security(password): completed secure signup + JWT flow; implemented JwtService, added BCrypt password hashing, validated signup requests, seeded users alice/bob, and updated SecurityConfig